Add Fast Wan friend link to homepage
- Added Fast Wan link (https://fast-wan.com/) to footer
- Positioned alongside existing partner links
- Maintains consistent styling and SEO attributes
- Supports mutual link building and SEO benefits

--- a/index.html
+++ b/index.html
@@ -778,6 +778,8 @@
                 <a href="https://aishenqi.net/" target="_blank" rel="noopener noreferrer" title="最全AI工具导航网站">AI神器大全</a>
                 <span style="margin: 0 0.5rem; color: rgba(255, 255, 255, 0.5);">|</span>
                 <a href="https://www.vkmoai.com" target="_blank" rel="noopener noreferrer" title="VKMO AI Tools Directory">VKMO AI</a>
+                <span style="margin: 0 0.5rem; color: rgba(255, 255, 255, 0.5);">|</span>
+                <a href="https://fast-wan.com/" target="_blank" rel="noopener noreferrer" title="Fast Wan">Fast Wan</a>
             </p>
     </footer>
 
