Add AI Tool Center friend link to homepage
- Added AI Tool Center link (https://aitoolcenter.com/) to footer
- Positioned alongside existing AI directory partners
- Maintains consistent styling and SEO attributes
- Expands AI tools ecosystem partnerships

--- a/index.html
+++ b/index.html
@@ -780,6 +780,8 @@
                 <a href="https://www.vkmoai.com" target="_blank" rel="noopener noreferrer" title="VKMO AI Tools Directory">VKMO AI</a>
                 <span style="margin: 0 0.5rem; color: rgba(255, 255, 255, 0.5);">|</span>
                 <a href="https://fast-wan.com/" target="_blank" rel="noopener noreferrer" title="Fast Wan">Fast Wan</a>
+                <span style="margin: 0 0.5rem; color: rgba(255, 255, 255, 0.5);">|</span>
+                <a href="https://aitoolcenter.com/" target="_blank" rel="noopener noreferrer" title="AI Tool Center">AI Tool Center</a>
             </p>
     </footer>
 
