--- a/index.html
+++ b/index.html
@@ -782,6 +782,8 @@
                 <a href="https://fast-wan.com/" target="_blank" rel="noopener noreferrer" title="Fast Wan">Fast Wan</a>
                 <span style="margin: 0 0.5rem; color: rgba(255, 255, 255, 0.5);">|</span>
                 <a href="https://aitoolcenter.com/" target="_blank" rel="noopener noreferrer" title="AI Tool Center">AI Tool Center</a>
+                <span style="margin: 0 0.5rem; color: rgba(255, 255, 255, 0.5);">|</span>
+                <a href="https://allinai.tools" target="_blank" rel="noopener noreferrer" title="All The Best AI Tools">All in AI Tools</a>
             </p>
     </footer>
 
