Add What Is Ai Tools friend link to homepage
- Added What Is Ai Tools link (https://whatisaitools.com/) to footer
- Uses descriptive title 'What Is Ai Tools'
- Positioned alongside existing AI directory partners
- Maintains consistent styling and SEO attributes
- Expands AI tools ecosystem network to 6 partners

--- a/index.html
+++ b/index.html
@@ -784,6 +784,8 @@
                 <a href="https://aitoolcenter.com/" target="_blank" rel="noopener noreferrer" title="AI Tool Center">AI Tool Center</a>
                 <span style="margin: 0 0.5rem; color: rgba(255, 255, 255, 0.5);">|</span>
                 <a href="https://allinai.tools" target="_blank" rel="noopener noreferrer" title="All The Best AI Tools">All in AI Tools</a>
+                <span style="margin: 0 0.5rem; color: rgba(255, 255, 255, 0.5);">|</span>
+                <a href="https://whatisaitools.com/" target="_blank" rel="noopener noreferrer" title="What Is Ai Tools">What Is Ai Tools</a>
             </p>
     </footer>
 
