Add See What New AI and SeekAIs friend links
- Added See What New AI (https://www.seewhatnewai.com) - AI discovery platform
- Added SeekAIs (https://SeekAIs.com/) - AI Tools Directory
- Maintains consistent styling and SEO attributes
- Expands AI tools ecosystem network to 8 partners
- Strengthens backlink profile and cross-promotion opportunities

--- a/index.html
+++ b/index.html
@@ -786,6 +786,10 @@
                 <a href="https://allinai.tools" target="_blank" rel="noopener noreferrer" title="All The Best AI Tools">All in AI Tools</a>
                 <span style="margin: 0 0.5rem; color: rgba(255, 255, 255, 0.5);">|</span>
                 <a href="https://whatisaitools.com/" target="_blank" rel="noopener noreferrer" title="What Is Ai Tools">What Is Ai Tools</a>
+                <span style="margin: 0 0.5rem; color: rgba(255, 255, 255, 0.5);">|</span>
+                <a href="https://www.seewhatnewai.com" target="_blank" rel="noopener noreferrer" title="See What New AI">See What New AI</a>
+                <span style="margin: 0 0.5rem; color: rgba(255, 255, 255, 0.5);">|</span>
+                <a href="https://SeekAIs.com/" target="_blank" rel="noopener noreferrer" title="SeekAIs">SeekAIs</a>
             </p>
     </footer>
 
