--- a/index.html
+++ b/index.html
@@ -790,6 +790,8 @@
                 <a href="https://www.seewhatnewai.com" target="_blank" rel="noopener noreferrer" title="See What New AI">See What New AI</a>
                 <span style="margin: 0 0.5rem; color: rgba(255, 255, 255, 0.5);">|</span>
                 <a href="https://SeekAIs.com/" target="_blank" rel="noopener noreferrer" title="SeekAIs">SeekAIs</a>
+                <span style="margin: 0 0.5rem; color: rgba(255, 255, 255, 0.5);">|</span>
+                <a href="https://nanobanana-image.com/" target="_blank" rel="noopener noreferrer" title="Nano Banana Image">Nano Banana Image</a>
             </p>
     </footer>
 
