Replace Nano Banana Image with AigoTools friend link
- Removed Nano Banana Image link from homepage footer
- Added AigoTools link (https://www.aigotools.com) for free submission
- Maintains 9 partner links in AI tools ecosystem
- Enables free website submission to AigoTools directory
- Keeps consistent styling and SEO attributes

--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
                 <span style="margin: 0 0.5rem; color: rgba(255, 255, 255, 0.5);">|</span>
                 <a href="https://SeekAIs.com/" target="_blank" rel="noopener noreferrer" title="SeekAIs">SeekAIs</a>
                 <span style="margin: 0 0.5rem; color: rgba(255, 255, 255, 0.5);">|</span>
-                <a href="https://nanobanana-image.com/" target="_blank" rel="noopener noreferrer" title="Nano Banana Image">Nano Banana Image</a>
+                <a href="https://www.aigotools.com" target="_blank" rel="noopener noreferrer" title="AigoTools">AigoTools</a>
             </p>
     </footer>
 
