Add AIToolsss Directory friend link for free submission
- Added AIToolsss Directory link (https://aitoolsss.com) to homepage footer
- Uses descriptive title 'AIToolsss Directory'
- Positioned alongside existing AI directory partners
- Enables free website submission to AIToolsss platform
- Expands AI tools ecosystem network to 10 partners
- Maintains consistent styling and SEO attributes

--- a/index.html
+++ b/index.html
@@ -792,6 +792,8 @@
                 <a href="https://SeekAIs.com/" target="_blank" rel="noopener noreferrer" title="SeekAIs">SeekAIs</a>
                 <span style="margin: 0 0.5rem; color: rgba(255, 255, 255, 0.5);">|</span>
                 <a href="https://www.aigotools.com" target="_blank" rel="noopener noreferrer" title="AigoTools">AigoTools</a>
+                <span style="margin: 0 0.5rem; color: rgba(255, 255, 255, 0.5);">|</span>
+                <a href="https://aitoolsss.com" target="_blank" rel="noopener noreferrer" title="AIToolsss Directory">AIToolsss Directory</a>
             </p>
     </footer>
 
