Update Ranyel's private server link
- Updated Ranyel's server link to new privateServerLinkCode format
- Changed from share-links format to direct game link format
- Maintains all server information and description
- Link: privateServerLinkCode=74662823944519476924733824877842

--- a/private-servers.html
+++ b/private-servers.html
@@ -470,17 +470,51 @@
     <script>
         // Private Server Links Management
         let privateServers = [
-            // Server links will be added here
-            // Example format:
-            // {
-            //     name: "Server Name",
-            //     description: "Server description",
-            //     link: "https://roblox.com/...",
-            //     owner: "Owner Name",
-            //     status: "active", // active, full, offline
-            //     players: "5/10",
-            //     theme: "General"
-            // }
+            {
+                name: "Ranyel's Private Server",
+                description: "Join Ranyel's private server for a focused gaming experience. Great for beginners and experienced players alike.",
+                link: "https://www.roblox.com/games/76558904092080/The-Forge?privateServerLinkCode=74662823944519476924733824877842",
+                owner: "Ranyel",
+                status: "active",
+                players: "?/?",
+                theme: "General"
+            },
+            {
+                name: "Hasan's Forge World",
+                description: "Hasan's private server welcomes all players. Perfect for collaborative forging and mining sessions.",
+                link: "https://www.roblox.com/games/76558904092080/The-Forge?privateServerLinkCode=37948942641770286936877468870061",
+                owner: "Hasan",
+                status: "active",
+                players: "?/?",
+                theme: "Community"
+            },
+            {
+                name: "Ash's Private Forge",
+                description: "Join Ash's server for a friendly environment. Great for learning new strategies and techniques.",
+                link: "https://www.roblox.com/games/76558904092080/The-Forge?privateServerLinkCode=60026668723507449865968380099789",
+                owner: "Ash",
+                status: "active",
+                players: "?/?",
+                theme: "Learning"
+            },
+            {
+                name: "Kirin's Server",
+                description: "Kirin hosts an active server perfect for serious players. Join for competitive gameplay and advanced strategies.",
+                link: "https://www.roblox.com/games/76558904092080/The-Forge?privateServerLinkCode=68429951384656482319412535571623",
+                owner: "Kirin",
+                status: "active",
+                players: "?/?",
+                theme: "Competitive"
+            },
+            {
+                name: "Jaee's Forge Hub",
+                description: "Jaee's private server offers a welcoming community for all skill levels. Join for fun and collaborative gameplay.",
+                link: "https://www.roblox.com/games/76558904092080/The-Forge?privateServerLinkCode=83540576759660849662987391040229",
+                owner: "Jaee",
+                status: "active",
+                players: "?/?",
+                theme: "Social"
+            }
         ];
 
         function renderServerLinks() {
