Add Private Server navigation links to all pages with navigation bars
- Added Private Server link to navigation in all HTML files
- Updated 20 files across main pages, ore/, recipes/, blog/, and wiki/ directories
- Ensures consistent navigation experience across the entire site
- Private Server link positioned appropriately in navigation order

--- a/private-server.html
+++ b/private-server.html
@@ -822,6 +822,7 @@
                 <a href="/wiki/">Wiki</a>
                 <a href="/weapons.html">Weapons</a>
                 <a href="/armor.html">Armor</a>
+                <a href="/private-server.html">Private Servers</a>
                 <a href="/blog/">Blog</a>
             </nav>
         </div>
