Add second Yandex.RTB ad unit to Russian homepage
- Added Yandex.RTB R-A-18247327-2 ad unit to /ru/index.html
- Positioned below calculator for better user experience
- Maintains existing R-A-18247327-1 ad unit above calculator
- Uses existing Yandex.RTB loader code in head section

--- a/ru/index.html
+++ b/ru/index.html
@@ -653,6 +653,19 @@
                 allowfullscreen>
             </iframe>
         </div>
+
+        <!-- Yandex.RTB R-A-18247327-2 -->
+        <div style="text-align: center; margin-top: 2rem;">
+            <div id="yandex_rtb_R-A-18247327-2"></div>
+            <script>
+            window.yaContextCb.push(() => {
+                Ya.Context.AdvManager.render({
+                    "blockId": "R-A-18247327-2",
+                    "renderTo": "yandex_rtb_R-A-18247327-2"
+                })
+            })
+            </script>
+        </div>
     </section>
 
     <!-- Quick Tips Section -->
