Remove all Yandex.RTB ads and add new advertisement code
- Removed all Yandex.RTB advertisement code from all pages
- Added new advertisement code to homepage, recipes, codes, and best-recipes pages
- Updated SEO files (sitemap, llms) to reflect changes
- Cleaned up all yaContextCb and yandex_rtb references

--- a/codes.html
+++ b/codes.html
@@ -351,6 +351,12 @@
             <p>Welcome to the ultimate collection of The Forge codes December 2025! Get free ores, coins, rerolls, and exclusive rewards. Our The Forge codes December 2025 list is updated daily with all working codes.</p>
         </div>
 
+        <!-- Advertisement -->
+        <div style="text-align: center; margin-bottom: 2rem;">
+            <script async="async" data-cfasync="false" src="https://pl28199006.effectivegatecpm.com/79ca9dd9143ba2de7e3df6c789a12d4c/invoke.js"></script>
+            <div id="container-79ca9dd9143ba2de7e3df6c789a12d4c"></div>
+        </div>
+
         <div class="update-info">
             <strong>📅 Last Updated:</strong> December 28, 2025 | <strong>⚡ Status:</strong> All The Forge codes December 2025 verified and working!
         </div>
