--- a/index.html
+++ b/index.html
@@ -573,9 +573,7 @@
     <!-- Ahrefs Analytics -->
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="EpsJtUp2VOHq8C8Dwkg1zQ" async></script>
     
-    <!-- Yandex.RTB -->
-    <script>window.yaContextCb=window.yaContextCb||[]</script>
-    <script src="https://yandex.ru/ads/system/context.js" async></script>
+
 </head>
 <body>
     <!-- Header -->
@@ -607,18 +605,12 @@
 
     <!-- Calculator Section -->
     <section id="calculator" class="calculator" style="max-width: none; padding: 3rem 20px;">
-        <!-- Yandex.RTB R-A-18247327-1 -->
+        <!-- Advertisement -->
         <div style="text-align: center; margin-bottom: 2rem;">
-            <div id="yandex_rtb_R-A-18247327-1"></div>
-            <script>
-            window.yaContextCb.push(() => {
-                Ya.Context.AdvManager.render({
-                    "blockId": "R-A-18247327-1",
-                    "renderTo": "yandex_rtb_R-A-18247327-1"
-                })
-            })
-            </script>
+            <script async="async" data-cfasync="false" src="https://pl28199006.effectivegatecpm.com/79ca9dd9143ba2de7e3df6c789a12d4c/invoke.js"></script>
+            <div id="container-79ca9dd9143ba2de7e3df6c789a12d4c"></div>
         </div>
+
         
         <div class="gacha-simulator-wrapper" style="width: 100%; margin: 20px 0; border-radius: 12px; overflow: hidden; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.15);">
             <iframe 
