--- a/recipes/best-recipes.html
+++ b/recipes/best-recipes.html
@@ -302,9 +302,7 @@
         }
     </style>
     
-    <!-- Yandex.RTB -->
-    <script>window.yaContextCb=window.yaContextCb||[]</script>
-    <script src="https://yandex.ru/ads/system/context.js" async></script>
+
 </head>
 <body>
     <header>
@@ -345,17 +343,10 @@
             </div>
         </div>
 
-        <!-- Yandex.RTB R-A-18247327-3 -->
+        <!-- Advertisement -->
         <div style="text-align: center; margin-bottom: 2rem;">
-            <div id="yandex_rtb_R-A-18247327-3"></div>
-            <script>
-            window.yaContextCb.push(() => {
-                Ya.Context.AdvManager.render({
-                    "blockId": "R-A-18247327-3",
-                    "renderTo": "yandex_rtb_R-A-18247327-3"
-                })
-            })
-            </script>
+            <script async="async" data-cfasync="false" src="https://pl28199006.effectivegatecpm.com/79ca9dd9143ba2de7e3df6c789a12d4c/invoke.js"></script>
+            <div id="container-79ca9dd9143ba2de7e3df6c789a12d4c"></div>
         </div>
 
         <!-- Best Overall Weapon Recipes -->
