--- a/recipes/index.html
+++ b/recipes/index.html
@@ -347,9 +347,7 @@
     <!-- Ahrefs Analytics -->
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="EpsJtUp2VOHq8C8Dwkg1zQ" async></script>
     
-    <!-- Yandex.RTB -->
-    <script>window.yaContextCb=window.yaContextCb||[]</script>
-    <script src="https://yandex.ru/ads/system/context.js" async></script>
+
     
     <!-- Advertisement code removed for security compliance --></head>
 <body>
@@ -377,17 +375,10 @@
             <p>Discover the best Forge recipes for legendary weapons and armor. Browse our complete collection of The Forge recipes including beginner Forge recipes, intermediate Forge recipes, advanced Forge recipes, and legendary Forge recipes. All The Forge recipes are verified and tested by our community.</p>
         </div>
 
-        <!-- Yandex.RTB R-A-18247327-3 -->
+        <!-- Advertisement -->
         <div style="text-align: center; margin-bottom: 2rem;">
-            <div id="yandex_rtb_R-A-18247327-3"></div>
-            <script>
-            window.yaContextCb.push(() => {
-                Ya.Context.AdvManager.render({
-                    "blockId": "R-A-18247327-3",
-                    "renderTo": "yandex_rtb_R-A-18247327-3"
-                })
-            })
-            </script>
+            <script async="async" data-cfasync="false" src="https://pl28199006.effectivegatecpm.com/79ca9dd9143ba2de7e3df6c789a12d4c/invoke.js"></script>
+            <div id="container-79ca9dd9143ba2de7e3df6c789a12d4c"></div>
         </div>
 
         <!-- Best Recipes Entry Point -->
