Add Snowite ore page - legendary wind-infused ore with attack speed bonus
- Created ore/snowite.html with complete guide for Snowite ore
- Added Snowite to main ore database table in ore/index.html
- Legendary rarity: 1/4325 drop rate, 8x multiplier, 150$ value
- Unique trait: +15% Attack Speed + Movement Speed reduction on enemies
- Found in Icy Pebble, Icy Rock, Icy Boulder, Small Ice Crystal
- Comprehensive mining guide and crafting information
- SEO optimized with proper meta tags and descriptions

--- a/ore/index.html
+++ b/ore/index.html
@@ -787,6 +787,16 @@
                             <td>So bright it almost floats.</td>
                         </tr>
                         <tr>
+                            <td class="ore-name"><a href="snowite.html" style="color: #ff5722; text-decoration: none; font-weight: bold;">Snowite</a></td>
+                            <td class="rarity-legendary">Legendary</td>
+                            <td>1/4325</td>
+                            <td>8x</td>
+                            <td>150$</td>
+                            <td>+15% Attack Speed, Movement Speed reduction for 3 seconds (30% chance on enemy) (Weapon)</td>
+                            <td>Icy Pebble, Icy Rock, Icy Boulder, Small Ice Crystal</td>
+                            <td>Light, sharp, and infused with wind energy. It almost floats when freshly mined.</td>
+                        </tr>
+                        <tr>
                             <td class="ore-name">Rainbow Crystal Ore</td>
                             <td class="rarity-legendary">Legendary</td>
                             <td>1/5000</td>
