--- a/recipes/best-recipes.html
+++ b/recipes/best-recipes.html
@@ -21,6 +21,11 @@
     <meta name="keywords" content="best forge recipes, top forge recipes, optimal forge recipes, highest success rate recipes, best weapon recipes, best armor recipes">
     <link rel="canonical" href="https://forge-calculator.com/recipes/best-recipes.html">
     
+    <!-- Language alternatives for international users -->
+    <link rel="alternate" hreflang="en" href="https://forge-calculator.com/recipes/best-recipes.html">
+    <link rel="alternate" hreflang="ru" href="https://forge-calculator.com/ru/recipes/best-recipes.html">
+    <link rel="alternate" hreflang="x-default" href="https://forge-calculator.com/recipes/best-recipes.html">
+    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://forge-calculator.com/recipes/best-recipes.html">
