--- a/ru/recipes/best-recipes.html
+++ b/ru/recipes/best-recipes.html
@@ -21,6 +21,11 @@
     <meta name="keywords" content="все крафты в the forge, крафты в the forge, все крафты the forge, полные крафты the forge, все виды крафтов the forge, крафты оружия the forge, крафты брони the forge, лучшие крафты the forge, оптимальные крафты the forge">
     <link rel="canonical" href="https://forge-calculator.com/ru/recipes/best-recipes.html">
     
+    <!-- Language alternatives for international users -->
+    <link rel="alternate" hreflang="en" href="https://forge-calculator.com/recipes/best-recipes.html">
+    <link rel="alternate" hreflang="ru" href="https://forge-calculator.com/ru/recipes/best-recipes.html">
+    <link rel="alternate" hreflang="x-default" href="https://forge-calculator.com/recipes/best-recipes.html">
+    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://forge-calculator.com/ru/recipes/best-recipes.html">
