--- a/ru/recipes/index.html
+++ b/ru/recipes/index.html
@@ -21,6 +21,11 @@
     <meta name="keywords" content="рецепты the forge, forge roblox рецепты, рецепты крафта the forge, список рецептов forge, лучшие рецепты forge, легендарные рецепты forge">
     <link rel="canonical" href="https://forge-calculator.com/ru/recipes/">
     
+    <!-- Language alternatives for international users -->
+    <link rel="alternate" hreflang="en" href="https://forge-calculator.com/recipes/">
+    <link rel="alternate" hreflang="ru" href="https://forge-calculator.com/ru/recipes/">
+    <link rel="alternate" hreflang="x-default" href="https://forge-calculator.com/recipes/">
+    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://forge-calculator.com/ru/recipes/">
