实施官方表格配色方案
- 在forge-theme.css中添加官方表格样式（深色背景，金色标题，浅灰色内容）
- 更新armor.html使用官方表格样式
- 更新ore/index.html使用官方表格样式，修正矿石链接颜色
- 开始更新weapons.html表格样式（部分完成）
- 表格样式完全匹配官方The Forge Wiki设计

--- a/ore/index.html
+++ b/ore/index.html
@@ -391,7 +391,7 @@
             <p>The Forge features various ore types found in different locations. Each ore has unique properties and spawn rates. Below is a comprehensive table of all ores:</p>
             
             <div class="ore-table">
-                <table>
+                <table class="official-table">
                     <thead>
                         <tr>
                             <th>Ore Name</th>
@@ -407,7 +407,7 @@
                     <tbody>
                         <!-- Common Ores -->
                         <tr>
-                            <td class="ore-name"><a href="stone.html" style="color: #ff5722; text-decoration: none; font-weight: bold;">Stone</a></td>
+                            <td class="ore-name"><a href="stone.html" style="color: #d4af37; text-decoration: none; font-weight: 600;">Stone</a></td>
                             <td class="rarity-common">Common</td>
                             <td>1/1</td>
                             <td>0.2x</td>
@@ -805,7 +805,7 @@
                             <td>So bright it almost floats.</td>
                         </tr>
                         <tr>
-                            <td class="ore-name"><a href="snowite.html" style="color: #ff5722; text-decoration: none; font-weight: bold;">Snowite</a></td>
+                            <td class="ore-name"><a href="snowite.html" style="color: #d4af37; text-decoration: none; font-weight: 600;">Snowite</a></td>
                             <td class="rarity-legendary">Legendary</td>
                             <td>1/4325</td>
                             <td>8x</td>
