--- a/weapons.html
+++ b/weapons.html
@@ -583,16 +583,16 @@
             <!-- Daggers -->
             <h3 style="color: #ff5722; margin-top: 2rem; margin-bottom: 1rem;">🗡️ Daggers</h3>
             <div style="overflow-x: auto;">
-                <table style="width: 100%; border-collapse: collapse; background: #fff; border-radius: 8px; overflow: hidden;">
+                <table class="official-table weapon-table">
                     <thead>
-                        <tr style="background: linear-gradient(135deg, #ff5722 0%, #ff9800 100%); color: #fff;">
-                            <th style="padding: 1rem; text-align: left;">Weapon</th>
-                            <th style="padding: 1rem; text-align: center;">Base Damage</th>
-                            <th style="padding: 1rem; text-align: center;">Attack Speed</th>
-                            <th style="padding: 1rem; text-align: center;">Attack Range</th>
-                            <th style="padding: 1rem; text-align: center;">Base Price</th>
-                            <th style="padding: 1rem; text-align: center;">Chance</th>
-                            <th style="padding: 1rem; text-align: left;">Description</th>
+                        <tr>
+                            <th>Weapon</th>
+                            <th>Base Damage</th>
+                            <th>Attack Speed</th>
+                            <th>Attack Range</th>
+                            <th>Base Price</th>
+                            <th>Chance</th>
+                            <th>Description</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -639,7 +639,7 @@
             <!-- Straight Swords -->
             <h3 style="color: #ff5722; margin-top: 2rem; margin-bottom: 1rem;">⚔️ Straight Swords</h3>
             <div style="overflow-x: auto;">
-                <table style="width: 100%; border-collapse: collapse; background: #fff; border-radius: 8px; overflow: hidden;">
+                <table class="official-table weapon-table">
                     <thead>
                         <tr style="background: linear-gradient(135deg, #ff5722 0%, #ff9800 100%); color: #fff;">
                             <th style="padding: 1rem; text-align: left;">Weapon</th>
@@ -722,7 +722,7 @@
             <!-- Katanas -->
             <h3 style="color: #ff5722; margin-top: 2rem; margin-bottom: 1rem;">🗡️ Katanas</h3>
             <div style="overflow-x: auto;">
-                <table style="width: 100%; border-collapse: collapse; background: #fff; border-radius: 8px; overflow: hidden;">
+                <table class="official-table weapon-table">
                     <thead>
                         <tr style="background: linear-gradient(135deg, #ff5722 0%, #ff9800 100%); color: #fff;">
                             <th style="padding: 1rem; text-align: left;">Weapon</th>
@@ -760,7 +760,7 @@
             <!-- Great Swords & Hammers -->
             <h3 style="color: #ff5722; margin-top: 2rem; margin-bottom: 1rem;">⚔️ Great Swords & Hammers</h3>
             <div style="overflow-x: auto;">
-                <table style="width: 100%; border-collapse: collapse; background: #fff; border-radius: 8px; overflow: hidden;">
+                <table class="official-table weapon-table">
                     <thead>
                         <tr style="background: linear-gradient(135deg, #ff5722 0%, #ff9800 100%); color: #fff;">
                             <th style="padding: 1rem; text-align: left;">Weapon</th>
@@ -834,7 +834,7 @@
             <!-- Gauntlets & Axes -->
             <h3 style="color: #ff5722; margin-top: 2rem; margin-bottom: 1rem;">👊 Gauntlets & Great Axes</h3>
             <div style="overflow-x: auto;">
-                <table style="width: 100%; border-collapse: collapse; background: #fff; border-radius: 8px; overflow: hidden;">
+                <table class="official-table weapon-table">
                     <thead>
                         <tr style="background: linear-gradient(135deg, #ff5722 0%, #ff9800 100%); color: #fff;">
                             <th style="padding: 1rem; text-align: left;">Weapon</th>
